--- a/data/htm/2012_2_normal_art.htm
+++ b/data/htm/2012_2_normal_art.htm
@@ -120,7 +120,7 @@
 <td class="pstyle2">3-3-0&nbsp;</td>
 <td class="pstyle2">월&nbsp;9-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">007-214&nbsp;</td>
+<td class="pstyle2">005-101&nbsp;</td>
 <td class="pstyle2">전영애&nbsp;</td>
 <td class="pstyle2">40&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -133,7 +133,7 @@
 <td class="pstyle2">3-3-0&nbsp;</td>
 <td class="pstyle2">수&nbsp;9-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">007-214&nbsp;</td>
+<td class="pstyle2">005-101&nbsp;</td>
 <td class="pstyle2">전영애&nbsp;</td>
 <td class="pstyle2">40&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -199,7 +199,7 @@
 <td class="pstyle2">금&nbsp;5,6,7&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">015-205&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">차병직&nbsp;</td>
 <td class="pstyle2">60&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -342,7 +342,7 @@
 <td class="pstyle2">금&nbsp;6,7,8&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">083-506&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">정종은&nbsp;</td>
 <td class="pstyle2">80&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -354,7 +354,7 @@
 <td class="pstyle2">3-3-0&nbsp;</td>
 <td class="pstyle2">화&nbsp;6-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">007-106&nbsp;</td>
+<td class="pstyle2">005-211&nbsp;</td>
 <td class="pstyle2">정우진&nbsp;</td>
 <td class="pstyle2">80&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -367,7 +367,7 @@
 <td class="pstyle2">3-3-0&nbsp;</td>
 <td class="pstyle2">목&nbsp;6-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">007-106&nbsp;</td>
+<td class="pstyle2">005-211&nbsp;</td>
 <td class="pstyle2">정우진&nbsp;</td>
 <td class="pstyle2">80&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -407,7 +407,7 @@
 <td class="pstyle2">수&nbsp;6,7,8&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">083-502&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">왕신연&nbsp;</td>
 <td class="pstyle2">60&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -433,7 +433,7 @@
 <td class="pstyle2">화&nbsp;4.5,5.5,6.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">083-505&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">최병진&nbsp;</td>
 <td class="pstyle2">80&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -446,7 +446,7 @@
 <td class="pstyle2">화&nbsp;6,7,8&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">049-309&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">김희량&nbsp;</td>
 <td class="pstyle2">50&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -679,7 +679,7 @@
 <td class="pstyle2">3-3-0&nbsp;</td>
 <td class="pstyle2">월&nbsp;7.5-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">006-103&nbsp;</td>
+<td class="pstyle2">028-303&nbsp;</td>
 <td class="pstyle2">권혁성&nbsp;</td>
 <td class="pstyle2">80&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -692,7 +692,7 @@
 <td class="pstyle2">3-3-0&nbsp;</td>
 <td class="pstyle2">수&nbsp;7.5-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">006-103&nbsp;</td>
+<td class="pstyle2">028-303&nbsp;</td>
 <td class="pstyle2">권혁성&nbsp;</td>
 <td class="pstyle2">80&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -797,7 +797,7 @@
 <td class="pstyle2">화&nbsp;5,6&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">007-203&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">주명진&nbsp;</td>
 <td class="pstyle2">80&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -861,7 +861,7 @@
 <td class="pstyle2">2-2-0&nbsp;</td>
 <td class="pstyle2">월&nbsp;5,6&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">043-201&nbsp;</td>
+<td class="pstyle2">006-105&nbsp;</td>
 <td class="pstyle2">박낙규&nbsp;</td>
 <td class="pstyle2">60&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -953,7 +953,7 @@
 <td class="pstyle2">월&nbsp;1.5-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">009-114&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">김예리&nbsp;</td>
 <td class="pstyle2">40&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -966,7 +966,7 @@
 <td class="pstyle2">수&nbsp;1.5-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">009-114&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">김예리&nbsp;</td>
 <td class="pstyle2">40&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -1106,7 +1106,7 @@
 <td class="pstyle2">소그룹 고전원전읽기 1&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">1-2-0&nbsp;</td>
-<td class="pstyle2">월&nbsp;10,9&nbsp;</td>
+<td class="pstyle2">월&nbsp;8,9&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">003-302&nbsp;</td>
 <td class="pstyle2">이승재&nbsp;</td>
@@ -1366,9 +1366,9 @@
 <td class="pstyle2">소그룹 고전원전읽기 2&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">1-2-0&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;&nbsp;&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
-<td class="pstyle2">-&nbsp;</td>
+<td class="pstyle2">수&nbsp;8,9&nbsp;</td>
+<td class="pstyle2">이론&nbsp;</td>
+<td class="pstyle2">007-111A&nbsp;</td>
 <td class="pstyle2">문중양&nbsp;</td>
 <td class="pstyle2">5&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -1407,7 +1407,7 @@
 <td class="pstyle2">3-3-0&nbsp;</td>
 <td class="pstyle2">화&nbsp;6-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">009-114&nbsp;</td>
+<td class="pstyle2">006-105&nbsp;</td>
 <td class="pstyle2">이종묵&nbsp;</td>
 <td class="pstyle2">40&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -1420,7 +1420,7 @@
 <td class="pstyle2">3-3-0&nbsp;</td>
 <td class="pstyle2">목&nbsp;6-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">009-114&nbsp;</td>
+<td class="pstyle2">006-105&nbsp;</td>
 <td class="pstyle2">이종묵&nbsp;</td>
 <td class="pstyle2">40&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
