--- a/data/htm/2012_2_normal_nature.htm
+++ b/data/htm/2012_2_normal_nature.htm
@@ -81,7 +81,7 @@
 <td class="pstyle2">3-3-0&nbsp;</td>
 <td class="pstyle2">월&nbsp;1.5-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">500-L301&nbsp;</td>
+<td class="pstyle2">500-L308&nbsp;</td>
 <td class="pstyle2">정가진&nbsp;</td>
 <td class="pstyle2">60&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -94,7 +94,7 @@
 <td class="pstyle2">3-3-0&nbsp;</td>
 <td class="pstyle2">수&nbsp;1.5-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">500-L301&nbsp;</td>
+<td class="pstyle2">500-L308&nbsp;</td>
 <td class="pstyle2">정가진&nbsp;</td>
 <td class="pstyle2">60&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -318,6 +318,32 @@
 <td class="pstyle2">026-108&nbsp;</td>
 <td class="pstyle2">김상완&nbsp;</td>
 <td class="pstyle2">100&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td></tr>
+<tr>
+<td class="pstyle2">1학년&nbsp;</td>
+<td class="pstyle2">006.041&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">생활구강건강관리&nbsp;</td>
+<td class="pstyle2">교양&nbsp;</td>
+<td class="pstyle2">3-3-0&nbsp;</td>
+<td class="pstyle2">월&nbsp;7.5-1.5&nbsp;</td>
+<td class="pstyle2">이론&nbsp;</td>
+<td class="pstyle2">058-432&nbsp;</td>
+<td class="pstyle2">김현덕&nbsp;</td>
+<td class="pstyle2">80&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td></tr>
+<tr>
+<td class="pstyle2">1학년&nbsp;</td>
+<td class="pstyle2">006.041&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">생활구강건강관리&nbsp;</td>
+<td class="pstyle2">교양&nbsp;</td>
+<td class="pstyle2">3-3-0&nbsp;</td>
+<td class="pstyle2">수&nbsp;7.5-1.5&nbsp;</td>
+<td class="pstyle2">이론&nbsp;</td>
+<td class="pstyle2">058-432&nbsp;</td>
+<td class="pstyle2">김현덕&nbsp;</td>
+<td class="pstyle2">80&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
