--- a/data/htm/2012_2_normal_special.htm
+++ b/data/htm/2012_2_normal_special.htm
@@ -66,9 +66,9 @@
 <td class="pstyle2">신입생세미나&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">1-1-0&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;&nbsp;&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
-<td class="pstyle2">-&nbsp;</td>
+<td class="pstyle2">화&nbsp;10,11&nbsp;</td>
+<td class="pstyle2">이론&nbsp;</td>
+<td class="pstyle2">001-207&nbsp;</td>
 <td class="pstyle2">방민호&nbsp;</td>
 <td class="pstyle2">15&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -144,9 +144,9 @@
 <td class="pstyle2">신입생세미나&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">1-1-0&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;&nbsp;&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
-<td class="pstyle2">-&nbsp;</td>
+<td class="pstyle2">수&nbsp;8,9&nbsp;</td>
+<td class="pstyle2">이론&nbsp;</td>
+<td class="pstyle2">008-404&nbsp;</td>
 <td class="pstyle2">Hejtmanek Milan&nbsp;</td>
 <td class="pstyle2">15&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -326,9 +326,9 @@
 <td class="pstyle2">신입생세미나&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">1-1-0&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;&nbsp;&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
-<td class="pstyle2">-&nbsp;</td>
+<td class="pstyle2">화&nbsp;10,9&nbsp;</td>
+<td class="pstyle2">이론&nbsp;</td>
+<td class="pstyle2">33-1-230&nbsp;</td>
 <td class="pstyle2">이경우&nbsp;</td>
 <td class="pstyle2">16&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -339,9 +339,9 @@
 <td class="pstyle2">신입생세미나&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">1-1-0&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;&nbsp;&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
-<td class="pstyle2">-&nbsp;</td>
+<td class="pstyle2">월&nbsp;8-1.5&nbsp;</td>
+<td class="pstyle2">이론&nbsp;</td>
+<td class="pstyle2">33-1-331&nbsp;</td>
 <td class="pstyle2">박은수&nbsp;</td>
 <td class="pstyle2">15&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -456,9 +456,9 @@
 <td class="pstyle2">신입생세미나&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">1-1-0&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;&nbsp;&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
-<td class="pstyle2">-&nbsp;</td>
+<td class="pstyle2">화&nbsp;8,9&nbsp;</td>
+<td class="pstyle2">이론&nbsp;</td>
+<td class="pstyle2">009-114&nbsp;</td>
 <td class="pstyle2">우한용&nbsp;</td>
 <td class="pstyle2">15&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -667,7 +667,7 @@
 <td class="pstyle2">&nbsp;&nbsp;&nbsp;&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">-&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">김대형&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -680,7 +680,7 @@
 <td class="pstyle2">&nbsp;&nbsp;&nbsp;&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">-&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">김수아&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -693,7 +693,7 @@
 <td class="pstyle2">&nbsp;&nbsp;&nbsp;&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">-&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">백미숙&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -706,7 +706,7 @@
 <td class="pstyle2">&nbsp;&nbsp;&nbsp;&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">-&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">백순근&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -732,7 +732,7 @@
 <td class="pstyle2">&nbsp;&nbsp;&nbsp;&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">-&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">이인성&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -745,7 +745,7 @@
 <td class="pstyle2">&nbsp;&nbsp;&nbsp;&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">-&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">강상경&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -758,7 +758,7 @@
 <td class="pstyle2">&nbsp;&nbsp;&nbsp;&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">-&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">안상훈&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -771,7 +771,7 @@
 <td class="pstyle2">&nbsp;&nbsp;&nbsp;&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">-&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">김지현&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -784,7 +784,7 @@
 <td class="pstyle2">&nbsp;&nbsp;&nbsp;&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">-&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">강혜정&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -797,7 +797,7 @@
 <td class="pstyle2">&nbsp;&nbsp;&nbsp;&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">-&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">이유선&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -810,7 +810,7 @@
 <td class="pstyle2">&nbsp;&nbsp;&nbsp;&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">-&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">김전&nbsp;</td>
 <td class="pstyle2">100&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -823,7 +823,7 @@
 <td class="pstyle2">&nbsp;&nbsp;&nbsp;&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">-&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">이봉주&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -836,7 +836,7 @@
 <td class="pstyle2">&nbsp;&nbsp;&nbsp;&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">-&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">허찬영&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -849,7 +849,7 @@
 <td class="pstyle2">&nbsp;&nbsp;&nbsp;&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">-&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">서이종&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -862,7 +862,7 @@
 <td class="pstyle2">&nbsp;&nbsp;&nbsp;&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">-&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">조비룡&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -875,7 +875,7 @@
 <td class="pstyle2">&nbsp;&nbsp;&nbsp;&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">-&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">최승언&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -888,7 +888,7 @@
 <td class="pstyle2">&nbsp;&nbsp;&nbsp;&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">-&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">김전&nbsp;</td>
 <td class="pstyle2">70&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -1226,7 +1226,7 @@
 <td class="pstyle2">수&nbsp;10,8,9&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">005-318&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">이구표&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
