--- a/data/htm/2012_2_normal_foreign.htm
+++ b/data/htm/2012_2_normal_foreign.htm
@@ -56,7 +56,7 @@
 <td class="pstyle2">월&nbsp;1.5-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">014-112B&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">이인수&nbsp;</td>
 <td class="pstyle2">40&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -69,7 +69,7 @@
 <td class="pstyle2">수&nbsp;1.5-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">014-112B&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">이인수&nbsp;</td>
 <td class="pstyle2">40&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -107,7 +107,7 @@
 <td class="pstyle2">3-3-0&nbsp;</td>
 <td class="pstyle2">화&nbsp;4.5-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">001-210&nbsp;</td>
+<td class="pstyle2">003-102&nbsp;</td>
 <td class="pstyle2">이광진&nbsp;</td>
 <td class="pstyle2">40&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -120,7 +120,7 @@
 <td class="pstyle2">3-3-0&nbsp;</td>
 <td class="pstyle2">목&nbsp;4.5-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">001-210&nbsp;</td>
+<td class="pstyle2">003-102&nbsp;</td>
 <td class="pstyle2">이광진&nbsp;</td>
 <td class="pstyle2">40&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -134,7 +134,7 @@
 <td class="pstyle2">월&nbsp;3-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">002-106&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">정희원&nbsp;</td>
 <td class="pstyle2">40&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -147,7 +147,7 @@
 <td class="pstyle2">수&nbsp;3-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">002-106&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">정희원&nbsp;</td>
 <td class="pstyle2">40&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -329,7 +329,7 @@
 <td class="pstyle2">화&nbsp;1.5-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">001-207&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">구연정&nbsp;</td>
 <td class="pstyle2">40&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -342,7 +342,7 @@
 <td class="pstyle2">목&nbsp;1.5-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">001-207&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">구연정&nbsp;</td>
 <td class="pstyle2">40&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -354,7 +354,7 @@
 <td class="pstyle2">2-2-0&nbsp;</td>
 <td class="pstyle2">수&nbsp;7.5,8.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">220-203&nbsp;</td>
+<td class="pstyle2">006-103&nbsp;</td>
 <td class="pstyle2">하세경&nbsp;</td>
 <td class="pstyle2">60&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
