--- a/data/htm/2012_2_normal_science.htm
+++ b/data/htm/2012_2_normal_science.htm
@@ -56,7 +56,7 @@
 <td class="pstyle2">화&nbsp;5,6&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">020-103&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">김성은&nbsp;</td>
 <td class="pstyle2">40&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -69,7 +69,7 @@
 <td class="pstyle2">목&nbsp;5,6&nbsp;</td>
 <td class="pstyle2">실험반1&nbsp;</td>
 <td class="pstyle2">102-202&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">김성은&nbsp;</td>
 <td class="pstyle2">40&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
