--- a/data/htm/2012_2_normal_society.htm
+++ b/data/htm/2012_2_normal_society.htm
@@ -56,7 +56,7 @@
 <td class="pstyle2">금&nbsp;6,7,8&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">016-106&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">박상영&nbsp;</td>
 <td class="pstyle2">50&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -69,7 +69,7 @@
 <td class="pstyle2">화&nbsp;1.5,2.5,3.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">016-216&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">임상헌&nbsp;</td>
 <td class="pstyle2">50&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -82,7 +82,7 @@
 <td class="pstyle2">화&nbsp;4.5-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">016-217&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">이상신&nbsp;</td>
 <td class="pstyle2">50&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -95,7 +95,7 @@
 <td class="pstyle2">목&nbsp;4.5-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">016-217&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">이상신&nbsp;</td>
 <td class="pstyle2">50&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -108,7 +108,7 @@
 <td class="pstyle2">월&nbsp;3-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">083-602&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">설인효&nbsp;</td>
 <td class="pstyle2">80&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -121,7 +121,7 @@
 <td class="pstyle2">수&nbsp;3-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">083-602&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">설인효&nbsp;</td>
 <td class="pstyle2">80&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -134,7 +134,7 @@
 <td class="pstyle2">화&nbsp;1.5-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">016-215&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">정성철&nbsp;</td>
 <td class="pstyle2">80&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -147,7 +147,7 @@
 <td class="pstyle2">목&nbsp;1.5-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">016-215&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">정성철&nbsp;</td>
 <td class="pstyle2">80&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -186,7 +186,7 @@
 <td class="pstyle2">목&nbsp;6,7,8&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">026-108&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">정상준&nbsp;</td>
 <td class="pstyle2">250&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -199,7 +199,7 @@
 <td class="pstyle2">월&nbsp;3-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">016-217&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">정은주&nbsp;</td>
 <td class="pstyle2">60&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -212,7 +212,7 @@
 <td class="pstyle2">수&nbsp;3-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">016-217&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">정은주&nbsp;</td>
 <td class="pstyle2">60&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -225,7 +225,7 @@
 <td class="pstyle2">화&nbsp;7.5-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">016-236&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">홍서연&nbsp;</td>
 <td class="pstyle2">60&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -238,7 +238,7 @@
 <td class="pstyle2">목&nbsp;7.5-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">016-236&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">홍서연&nbsp;</td>
 <td class="pstyle2">60&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -329,7 +329,7 @@
 <td class="pstyle2">목&nbsp;7.5,8.5,9.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">016-214&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">김경화&nbsp;</td>
 <td class="pstyle2">100&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -394,7 +394,7 @@
 <td class="pstyle2">금&nbsp;6,7,8&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">083-402&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">임영훈&nbsp;</td>
 <td class="pstyle2">60&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -407,7 +407,7 @@
 <td class="pstyle2">수&nbsp;6,7,8&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">009-106&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">김희경&nbsp;</td>
 <td class="pstyle2">60&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -523,8 +523,21 @@
 <td class="pstyle2">3-3-0&nbsp;</td>
 <td class="pstyle2">화&nbsp;2,3,4&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">10-1-507&nbsp;</td>
+<td class="pstyle2">10-1-101&nbsp;</td>
 <td class="pstyle2">진동섭&nbsp;</td>
+<td class="pstyle2">80&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td></tr>
+<tr>
+<td class="pstyle2">1학년&nbsp;</td>
+<td class="pstyle2">005.032&nbsp;</td>
+<td class="pstyle2">002&nbsp;</td>
+<td class="pstyle2">교육의 이해&nbsp;</td>
+<td class="pstyle2">교양&nbsp;</td>
+<td class="pstyle2">3-3-0&nbsp;</td>
+<td class="pstyle2">화&nbsp;2,3,4&nbsp;</td>
+<td class="pstyle2">이론&nbsp;</td>
+<td class="pstyle2">009-106&nbsp;</td>
+<td class="pstyle2">박환보&nbsp;</td>
 <td class="pstyle2">80&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -589,7 +602,7 @@
 <td class="pstyle2">화&nbsp;5,6,7&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">   -    &nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">박종헌&nbsp;</td>
 <td class="pstyle2">90&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -628,7 +641,7 @@
 <td class="pstyle2">금&nbsp;5,6,7&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">083-404&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">남영주&nbsp;</td>
 <td class="pstyle2">80&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -654,7 +667,7 @@
 <td class="pstyle2">월&nbsp;6,7,8&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">016-105&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">김수영&nbsp;</td>
 <td class="pstyle2">80&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -667,7 +680,7 @@
 <td class="pstyle2">화&nbsp;7.5,8.5,9.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">016-214&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">정혜란&nbsp;</td>
 <td class="pstyle2">80&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
