수강편람 업데이트(2012-2)

--- a/data/htm/2012_2_basics_foreign.htm
+++ b/data/htm/2012_2_basics_foreign.htm
@@ -4891,7 +4891,7 @@
 <td class="pstyle2">3-3-0&nbsp;</td>
 <td class="pstyle2">화&nbsp;7.5-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">002-106&nbsp;</td>
+<td class="pstyle2">009-110&nbsp;</td>
 <td class="pstyle2">손윤락&nbsp;</td>
 <td class="pstyle2">35&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -4904,7 +4904,7 @@
 <td class="pstyle2">3-3-0&nbsp;</td>
 <td class="pstyle2">목&nbsp;7.5-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">002-106&nbsp;</td>
+<td class="pstyle2">009-110&nbsp;</td>
 <td class="pstyle2">손윤락&nbsp;</td>
 <td class="pstyle2">35&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -4980,9 +4980,22 @@
 <td class="pstyle2">스와힐리어와 아프리카문화 1&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">3-3-1&nbsp;</td>
-<td class="pstyle2">금&nbsp;2,3,4,6,5&nbsp;</td>
+<td class="pstyle2">금&nbsp;2,3,4&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">001-209&nbsp;</td>
+<td class="pstyle2">김광수&nbsp;</td>
+<td class="pstyle2">25&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td></tr>
+<tr>
+<td class="pstyle2">1학년&nbsp;</td>
+<td class="pstyle2">010.062C&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">스와힐리어와 아프리카문화 1&nbsp;</td>
+<td class="pstyle2">교양&nbsp;</td>
+<td class="pstyle2">3-3-1&nbsp;</td>
+<td class="pstyle2">토&nbsp;2&nbsp;</td>
+<td class="pstyle2">실험반1&nbsp;</td>
+<td class="pstyle2">003-106&nbsp;</td>
 <td class="pstyle2">김광수&nbsp;</td>
 <td class="pstyle2">25&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -5019,23 +5032,23 @@
 <td class="pstyle2">스와힐리어와 아프리카문화 2&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">3-3-1&nbsp;</td>
-<td class="pstyle2">금&nbsp;7,3,6,7,8&nbsp;</td>
-<td class="pstyle2">실험반2&nbsp;</td>
-<td class="pstyle2">003-104&nbsp;</td>
+<td class="pstyle2">금&nbsp;6,7,8&nbsp;</td>
+<td class="pstyle2">이론&nbsp;</td>
+<td class="pstyle2">003-103&nbsp;</td>
 <td class="pstyle2">김광수&nbsp;</td>
 <td class="pstyle2">25&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
-<td class="pstyle2">010.073B&nbsp;</td>
+<td class="pstyle2">010.070A&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td>
-<td class="pstyle2">몽골의 언어와 문화 1&nbsp;</td>
+<td class="pstyle2">스와힐리어와 아프리카문화 2&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">3-3-1&nbsp;</td>
-<td class="pstyle2">월&nbsp;8&nbsp;</td>
+<td class="pstyle2">토&nbsp;3&nbsp;</td>
 <td class="pstyle2">실험반1&nbsp;</td>
-<td class="pstyle2">001-101&nbsp;</td>
-<td class="pstyle2">Davaajay Urtnasan&nbsp;</td>
+<td class="pstyle2">003-107&nbsp;</td>
+<td class="pstyle2">김광수&nbsp;</td>
 <td class="pstyle2">25&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -5048,6 +5061,19 @@
 <td class="pstyle2">수&nbsp;6,7,8&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">007-203&nbsp;</td>
+<td class="pstyle2">Davaajay Urtnasan&nbsp;</td>
+<td class="pstyle2">25&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td></tr>
+<tr>
+<td class="pstyle2">1학년&nbsp;</td>
+<td class="pstyle2">010.073B&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">몽골의 언어와 문화 1&nbsp;</td>
+<td class="pstyle2">교양&nbsp;</td>
+<td class="pstyle2">3-3-1&nbsp;</td>
+<td class="pstyle2">토&nbsp;1&nbsp;</td>
+<td class="pstyle2">실험반1&nbsp;</td>
+<td class="pstyle2">001-101&nbsp;</td>
 <td class="pstyle2">Davaajay Urtnasan&nbsp;</td>
 <td class="pstyle2">25&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
