--- a/data/htm/2012_2_basics_all.htm
+++ b/data/htm/2012_2_basics_all.htm
@@ -419,7 +419,7 @@
 <td class="pstyle2">3-2-2&nbsp;</td>
 <td class="pstyle2">화&nbsp;4.5,5.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">018-601&nbsp;</td>
+<td class="pstyle2">500-L303&nbsp;</td>
 <td class="pstyle2">이은주&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -432,7 +432,7 @@
 <td class="pstyle2">3-2-2&nbsp;</td>
 <td class="pstyle2">목&nbsp;4.5,5.5&nbsp;</td>
 <td class="pstyle2">실험반1&nbsp;</td>
-<td class="pstyle2">018-601&nbsp;</td>
+<td class="pstyle2">500-L303&nbsp;</td>
 <td class="pstyle2">이은주&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -445,7 +445,7 @@
 <td class="pstyle2">3-2-2&nbsp;</td>
 <td class="pstyle2">화&nbsp;4.5,5.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">500-L303&nbsp;</td>
+<td class="pstyle2">018-601&nbsp;</td>
 <td class="pstyle2">서정민&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -458,7 +458,7 @@
 <td class="pstyle2">3-2-2&nbsp;</td>
 <td class="pstyle2">목&nbsp;4.5,5.5&nbsp;</td>
 <td class="pstyle2">실험반1&nbsp;</td>
-<td class="pstyle2">500-L303&nbsp;</td>
+<td class="pstyle2">018-601&nbsp;</td>
 <td class="pstyle2">서정민&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -6295,7 +6295,7 @@
 <td class="pstyle2">3-3-0&nbsp;</td>
 <td class="pstyle2">화&nbsp;7.5-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">002-106&nbsp;</td>
+<td class="pstyle2">009-110&nbsp;</td>
 <td class="pstyle2">손윤락&nbsp;</td>
 <td class="pstyle2">35&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -6308,7 +6308,7 @@
 <td class="pstyle2">3-3-0&nbsp;</td>
 <td class="pstyle2">목&nbsp;7.5-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">002-106&nbsp;</td>
+<td class="pstyle2">009-110&nbsp;</td>
 <td class="pstyle2">손윤락&nbsp;</td>
 <td class="pstyle2">35&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -6384,9 +6384,22 @@
 <td class="pstyle2">스와힐리어와 아프리카문화 1&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">3-3-1&nbsp;</td>
-<td class="pstyle2">금&nbsp;2,3,4,6,5&nbsp;</td>
+<td class="pstyle2">금&nbsp;2,3,4&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">001-209&nbsp;</td>
+<td class="pstyle2">김광수&nbsp;</td>
+<td class="pstyle2">25&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td></tr>
+<tr>
+<td class="pstyle2">1학년&nbsp;</td>
+<td class="pstyle2">010.062C&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">스와힐리어와 아프리카문화 1&nbsp;</td>
+<td class="pstyle2">교양&nbsp;</td>
+<td class="pstyle2">3-3-1&nbsp;</td>
+<td class="pstyle2">토&nbsp;2&nbsp;</td>
+<td class="pstyle2">실험반1&nbsp;</td>
+<td class="pstyle2">003-106&nbsp;</td>
 <td class="pstyle2">김광수&nbsp;</td>
 <td class="pstyle2">25&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -7372,9 +7385,22 @@
 <td class="pstyle2">스와힐리어와 아프리카문화 2&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">3-3-1&nbsp;</td>
-<td class="pstyle2">금&nbsp;7,3,6,7,8&nbsp;</td>
-<td class="pstyle2">실험반2&nbsp;</td>
-<td class="pstyle2">003-104&nbsp;</td>
+<td class="pstyle2">금&nbsp;6,7,8&nbsp;</td>
+<td class="pstyle2">이론&nbsp;</td>
+<td class="pstyle2">003-103&nbsp;</td>
+<td class="pstyle2">김광수&nbsp;</td>
+<td class="pstyle2">25&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td></tr>
+<tr>
+<td class="pstyle2">1학년&nbsp;</td>
+<td class="pstyle2">010.070A&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">스와힐리어와 아프리카문화 2&nbsp;</td>
+<td class="pstyle2">교양&nbsp;</td>
+<td class="pstyle2">3-3-1&nbsp;</td>
+<td class="pstyle2">토&nbsp;3&nbsp;</td>
+<td class="pstyle2">실험반1&nbsp;</td>
+<td class="pstyle2">003-107&nbsp;</td>
 <td class="pstyle2">김광수&nbsp;</td>
 <td class="pstyle2">25&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -7411,9 +7437,9 @@
 <td class="pstyle2">몽골의 언어와 문화 1&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">3-3-1&nbsp;</td>
-<td class="pstyle2">월&nbsp;8&nbsp;</td>
-<td class="pstyle2">실험반1&nbsp;</td>
-<td class="pstyle2">001-101&nbsp;</td>
+<td class="pstyle2">수&nbsp;6,7,8&nbsp;</td>
+<td class="pstyle2">이론&nbsp;</td>
+<td class="pstyle2">007-203&nbsp;</td>
 <td class="pstyle2">Davaajay Urtnasan&nbsp;</td>
 <td class="pstyle2">25&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -7424,9 +7450,9 @@
 <td class="pstyle2">몽골의 언어와 문화 1&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">3-3-1&nbsp;</td>
-<td class="pstyle2">수&nbsp;6,7,8&nbsp;</td>
-<td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">007-203&nbsp;</td>
+<td class="pstyle2">토&nbsp;1&nbsp;</td>
+<td class="pstyle2">실험반1&nbsp;</td>
+<td class="pstyle2">001-101&nbsp;</td>
 <td class="pstyle2">Davaajay Urtnasan&nbsp;</td>
 <td class="pstyle2">25&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -10754,7 +10780,7 @@
 <td class="pstyle2">3-3-0&nbsp;</td>
 <td class="pstyle2">월&nbsp;3-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">500-L311&nbsp;</td>
+<td class="pstyle2">020-108&nbsp;</td>
 <td class="pstyle2">함지영&nbsp;</td>
 <td class="pstyle2">50&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -10767,7 +10793,7 @@
 <td class="pstyle2">3-3-0&nbsp;</td>
 <td class="pstyle2">수&nbsp;3-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">500-L311&nbsp;</td>
+<td class="pstyle2">020-108&nbsp;</td>
 <td class="pstyle2">함지영&nbsp;</td>
 <td class="pstyle2">50&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
