--- a/data/htm/2012_2_basics_science.htm
+++ b/data/htm/2012_2_basics_science.htm
@@ -1446,7 +1446,7 @@
 <td class="pstyle2">3-3-0&nbsp;</td>
 <td class="pstyle2">월&nbsp;3-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">500-L311&nbsp;</td>
+<td class="pstyle2">020-108&nbsp;</td>
 <td class="pstyle2">함지영&nbsp;</td>
 <td class="pstyle2">50&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -1459,7 +1459,7 @@
 <td class="pstyle2">3-3-0&nbsp;</td>
 <td class="pstyle2">수&nbsp;3-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">500-L311&nbsp;</td>
+<td class="pstyle2">020-108&nbsp;</td>
 <td class="pstyle2">함지영&nbsp;</td>
 <td class="pstyle2">50&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
